feat: implement weaponToItemLot mappings, add EquipCustomWeapon

--- a/EldenRingParamsEditor/EldenRingParamsEditor.csproj
+++ b/EldenRingParamsEditor/EldenRingParamsEditor.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -12,6 +11,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Resources\ParamDefs\**\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+    <Content Include="Resources\Metadata\**\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+  </ItemGroup>
+
+  <!--<ItemGroup>
 	<None Remove="Resources\ParamDefs\ItemLotParam.xml" />
 	<EmbeddedResource Include="Resources\ParamDefs\ItemLotParam.xml" />
 	<None Remove="Resources\ParamDefs\ShopLineupParam.xml" />
@@ -24,6 +36,6 @@
 	<EmbeddedResource Include="Resources\ParamDefs\GameSystemCommonParam.xml" />
 	<None Remove="Resources\Metadata\WeaponIdToItemLotIdsMap.json" />
 	<EmbeddedResource Include="Resources\Metadata\WeaponIdToItemLotIdsMap.json" />
-  </ItemGroup>
+  </ItemGroup>-->
 
 </Project>
